--- a/project/templates/_base.html
+++ b/project/templates/_base.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Flask Skeleton{% block title %}{% endblock %}</title>
+    <title>GolfConnect24 Machine Learning API{% block title %}{% endblock %}</title>
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
